thirdparty/adasdl/thin/adasdl/AdaSDL/binding/bind_check/sdl_c_sizes.h


#ifndef c_sizes_h
#define c_sizes_h

/* SDL_Types.h */
int Uint8_Size ();
int Uint16_Size ();

/* SDL_Events.h */
int SDL_ActiveEvent_Size ();
int SDL_KeyboardEvent_Size ();
int SDL_keysym_Size ();
int SDLKey_Size ();
int SDLMod_Size ();
int SDL_MouseMotionEvent_Size ();
int SDL_MouseButtonEvent_Size ();
int SDL_JoyAxisEvent_Size ();
int SDL_JoyBallEvent_Size ();
int SDL_JoyHatEvent_Size ();
int SDL_JoyButtonEvent_Size ();
int SDL_ResizeEvent_Size ();
int SDL_QuitEvent_Size ();
int SDL_UserEvent_Size ();
int SDL_SysWMEvent_Size ();
int SDL_Event_Size ();
int SDL_CDtrack_Size ();
int SDL_CD_Size ();

#endif